--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,10 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>${project.artifactId}</repository>
-					<tag>${project.version}</tag>
+					<!--<repository>${project.artifactId}</repository>
+					<tag>${project.version}</tag>-->
+					<repository>kafka-monitor</repository>
+					<tag>1.0.0</tag>
 					<buildArgs>
 						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
 					</buildArgs>
