--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8082
 
-spring.datasource.url=jdbc:mysql://mysqldb/user_management
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://mysql/user_management
+spring.datasource.username=testuser
+spring.datasource.password=test123
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
